--- a/main/PortfolioOptimization.csproj
+++ b/main/PortfolioOptimization.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\CoreLib\CoreLib.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
+  </ItemGroup>
+
 </Project>
