--- a/CoreLib/CoreLib.fsproj
+++ b/CoreLib/CoreLib.fsproj
@@ -1,14 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="logic.fs"/>
-    <Compile Include="Parser.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="core.fs"/>
   </ItemGroup>
 
   <ItemGroup>
